--- a/src/main/resources/templates/articles/new.mustache
+++ b/src/main/resources/templates/articles/new.mustache
@@ -1,6 +1,6 @@
 <!--host로 호출 articles 호출-->
     {{>layouts/header}}
-<form action="/articles/posts" method="post">
+<form action="/articles/posts" class="container" method="post">
     <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">title</label>
         <input type="text" class="form-control" name="title" aria-describedby="emailHelp">
@@ -14,7 +14,5 @@
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
     {{>layouts/footer}}
-</form>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-</body>
-</html>
+
+
