--- a/src/main/resources/templates/hospital/list.mustache
+++ b/src/main/resources/templates/hospital/list.mustache
@@ -1,22 +1,24 @@
 {{>layouts/header}}
-<table class="table table-hover">
-    <thead>
-    <tr>
-        <th scope="col">Id</th>
-        <th scope="col">Title</th>
-        <th scope="col">Content</th>
-    </tr>
-    </thead>
-    <tbody>
-    {{#hospitals}}
+<div class="mb-3">
+    <table class="table table-hover">
+        <thead>
         <tr>
-            <th scope="row">{{id}}</th>
-            <td>{{hospitalName}}</td>
-            <td>{{roadNameAddress}}</td>
+            <th scope="col">Id</th>
+            <th scope="col">Title</th>
+            <th scope="col">Content</th>
         </tr>
-    {{/hospitals}}
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+        {{#hospitals}}
+            <tr>
+                <th scope="row">{{id}}</th>
+                <td>{{hospitalName}}</td>
+                <td>{{roadNameAddress}}</td>
+            </tr>
+        {{/hospitals}}
+        </tbody>
+    </table>
+</div>
 <ul class="pagination justify-content-center">
     <li class="page-item"><a class="page-link" href="?page={{first}}">first</a></li>
     <li class="page-item"><a class="page-link" href="?page={{previous}}">Previous</a></li>
