--- a/src/main/resources/templates/hospital/list.mustache
+++ b/src/main/resources/templates/hospital/list.mustache
@@ -1,4 +1,16 @@
 {{>layouts/header}}
+
+<!--form의 method=get으로 하면 주소 뒤에 ?keyword=<> 이런 형태로 넘어갑니다.-->
+<form action="/hospitals/list" method="get">
+    {{#keyword}}
+        지역 : <input type="text" name="keyword" value="{{keyword}}"/>
+        <input type="submit" />
+    {{/keyword}}
+    {{^keyword}}
+        지역 : <input type="text" name="keyword" />
+        <input type="submit" />
+    {{/keyword}}
+</form>
 <div class="mb-3">
     <table class="table table-hover">
         <thead>
@@ -20,9 +32,13 @@
     </table>
 </div>
 <ul class="pagination justify-content-center">
-    <li class="page-item"><a class="page-link" href="?page={{first}}">first</a></li>
-    <li class="page-item"><a class="page-link" href="?page={{previous}}">Previous</a></li>
-    <li class="page-item"><a class="page-link" href="?page={{next}}">Next</a></li>
-    <li class="page-item"><a class="page-link" href="?page={{last}}">last</a></li>
+    {{#keyword}}
+        <a class="page-link" href="?page={{previous}}&keyword={{keyword}}">Previous </a>
+        <a class="page-link" href="?page={{next}}&keyword={{keyword}}">Next </a>
+    {{/keyword}}
+    {{^keyword}}
+    <a class="page-link" href="?page={{previous}}"> Previous </a>
+    <a class="page-link" href="?page={{next}}">Next </a>
+    {{/keyword}}
 </ul>
 {{>layouts/footer}}
